--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vavada Casino - Welcome Bonus</title>
-  <link rel="stylesheet" href="/src/assets/styles.css">
-  <link rel="stylesheet" href="/src/assets/burger.css">
+  <link rel="stylesheet" href="./src/assets/styles.css">
+  <link rel="stylesheet" href="./src/assets/burger.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
@@ -50,7 +50,7 @@
         nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor.</p>
 
       <div class="banner-carousel">
-        <div class="banner active" style="background-image: url('/public/banner2.jpg')">
+        <div class="banner active" style="background-image: url('./public/banner2.jpg')">
           <div class="banner__overlay"></div>
           <div class="banner__content">
             <h2 class="banner__title">Free bonus</h2>
@@ -58,7 +58,7 @@
           </div>
         </div>
 
-        <div class="banner" style="background-image: url('/public/banner1.jpg')">
+        <div class="banner" style="background-image: url('./public/banner1.jpg')">
           <div class="banner__overlay"></div>
           <div class="banner__content">
             <h2 class="banner__title">Special offer</h2>
@@ -66,7 +66,7 @@
           </div>
         </div>
 
-        <div class="banner" style="background-image: url('/public/banner3.jpg')">
+        <div class="banner" style="background-image: url('./public/banner3.jpg')">
           <div class="banner__overlay"></div>
           <div class="banner__content">
             <h2 class="banner__title">Free bonus</h2>
