--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header class="header">
     <div class="container header__container">
       <a href="">
-        <img src="/public/logo.svg" alt="Vavada Logo" class="header__logo">
+        <img src="./public/logo.svg" alt="Vavada Logo" class="header__logo">
       </a>
 
       <button class="header__burger" aria-label="Toggle menu">
@@ -98,9 +98,9 @@
       </nav>
 
       <div class="footer__payments">
-        <img src="/public/visa.png" alt="Visa" class="footer__payment-icon">
-        <img src="/public/maestro.svg" alt="Maestro" class="footer__payment-icon">
-        <img src="/public/skrill.png" alt="Skrill" class="footer__payment-icon">
+        <img src="./public/visa.png" alt="Visa" class="footer__payment-icon">
+        <img src="./public/maestro.svg" alt="Maestro" class="footer__payment-icon">
+        <img src="./public/skrill.png" alt="Skrill" class="footer__payment-icon">
       </div>
 
       <div class="footer__copyright">
@@ -110,7 +110,7 @@
   </footer>
 </body>
 
-<script src="/src/js/carousel.js"></script>
-<script src="/src/js/burgerMenu.js"></script>
+<script src="./src/js/carousel.js"></script>
+<script src="./src/js/burgerMenu.js"></script>
 
 </html>
